[package]
name = "ash_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
winit = "0.28.3"
winapi = "0.3.6"
ash-window = "0.12.0"
raw-window-handle = "0.5.0"
ash = { version = "0.37.1", default-features = false, features = ["linked", "debug"] }
